--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,15 @@
         "@types/node": "^16.18.25",
         "@types/react": "^18.2.0",
         "@types/react-dom": "^18.2.1",
+        "axios": "^1.4.0",
         "bootstrap": "^5.2.3",
+        "jwt-decode": "^3.1.2",
         "mobx": "^6.9.0",
         "mobx-react-lite": "^3.4.3",
         "react": "^18.2.0",
         "react-bootstrap": "^2.7.4",
         "react-dom": "^18.2.0",
+        "react-hook-form": "^7.43.9",
         "react-router-dom": "^6.11.1",
         "react-scripts": "5.0.1",
         "typescript": "^4.9.5",
