--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
     "name": "server",
     "version": "1.0.0",
     "description": "",
+    "type": "module",
     "main": "index.js",
     "scripts": {
         "dev": "nodemon index.js",
@@ -14,8 +15,11 @@
         "nodemon": "^2.0.22"
     },
     "dependencies": {
+        "bcrypt": "^5.1.0",
+        "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "jsonwebtoken": "^9.0.0",
         "pg": "^8.10.0"
     }
 }
