--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
         "react-bootstrap": "^2.7.4",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.43.9",
+        "react-query": "^3.39.3",
         "react-router-dom": "^6.11.1",
         "react-scripts": "5.0.1",
         "typescript": "^4.9.5",
